--- a/brokerage.html
+++ b/brokerage.html
@@ -55,7 +55,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="delay-1">We are</span><br><span class="delay-2">market</span><br><span class="green-underline delay-3">makers.</span></h1>
+<h1 class="col-10 offset-1"><span class="delay-1">Limitless</span><br><span class="green-underline delay-2">Ambition</span></h1>
 
         </section>
 
@@ -66,28 +66,28 @@ Your browser does not support the video tag.
 
 
 
-  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">DELIVERING
+  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">LEASING
     <br>
-<span class="green-underline">LUXURY</span></h2>
+<span class="green-underline">FASTER</span></h2>
 
 <div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
 <p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
-As leaders in all industries continue to search for competitive advantages, they continue to overlook the most effective weapon in their arsenal—their workplace. That’s where we come in. We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come.
+Authentic, consistent, and ambitious. That sums up the core principles of our seasoned brokerage team. They are natural relationship-builders, able to inspire trust and build goodwill, often showing up in ways that may be otherwise outside of their job description. They are changemakers, driving a revolution in the industry by leasing the elevated workplace experience faster than any other firm.
 </p>
 
 </div>
 
   <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
 
-  <a href="#" class="col-12 link-outline-2"><p class="col-10">BROKERAGE</p>
+  <a href="#" class="col-12 link-outline-2"><p class="col-10">LANDLORD & SELLER REPRESENTATION</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
-    <a href="#" class="col-12 link-outline-2"><p class="col-10">DEVELOPMENT</p>
+    <a href="#" class="col-12 link-outline-2"><p class="col-10">TENANT & BUYER REPRESENTATION</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
-  <a href="#" class="col-12 border-bottom link-outline-2"><p class="col-10">MANAGEMENT</p>
+  <a href="#" class="col-12 border-bottom link-outline-2"><p class="col-10">SITE SELECTION & ACQUISITION</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
@@ -97,80 +97,53 @@ As leaders in all industries continue to search for competitive advantages, they
 
 </section>
 
-<section class="col-12 p-0 d-none d-lg-block">
-<embed class="col-12 p-0" src="push-3.html" id="cover-1">
-</section>
 
 
 
 
+<section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
 
 
-
-<section class="zoom-1 col-12 p-0 d-xl-none" id="push-3-mobile">
-<img src="assets/images/push-3.svg" alt="#">
-</section>
-
-
-
-<section class="col-12 p-0 d-xl-none" id="push-3-pt2-mobile">
-
-  <div class="reveal-container col-10 col-lg-3 offset-1">
-  <h2 class="col-12">
-BUILDING<br><span class="turquoise-underline">INSPIRATION</span>
-    </h2>
-
-    <p class="col-12">
-We elevate the workplace to be more reactive to peoples’ expectations of how things can be smarter and more efficient. We demonstrate this through beautifully designed, highly-curated experiential workplaces that inspire people
-
-</div>
-
-</section>
-
-
-
-
-
-
-
-
-<section class="featured-projects col-12 col-xl-10 offset-xl-1" id="featured-projects">
-
-
-<div class="container-p col-10 col-md-4 col-lg-3 col-xl-4 offset-1 offset-xl-0 float-left">
+<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
   <div class="portfolio-list col-12 float-left">
     <a href="#">
       <div class="col-12 p-0 portfolio-image-container">
-  <img src="assets/images/testimonials/rice.png" alt="#">
+  <img src="assets/images/portfolio/riviera.png" alt="#">
   </div>
-<h3>Toby Rice</h3>
+<h3>RIVIERA</h3>
 </a>
 </div>
 </div>
 
 
-<div class="container-p col-10 col-md-4 col-lg-3 col-xl-4 offset-1 offset-xl-0 float-left">
+<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/testimonials/waldron.png" alt="#">
+<img src="assets/images/portfolio/visionedit.png" alt="#">
 </div>
-<h3>John Waldron</h3>
+<h3>THE VISION</h3>
 </a>
 </div>
 </div>
 
-<div class="container-p col-10 col-md-4 col-lg-3 col-xl-4 offset-1 offset-xl-0 float-left">
+<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/testimonials/fleck.png" alt="#">
+<img src="assets/images/portfolio/diamond.png" alt="#">
 </div>
-<h3>Steve Fleck</h3>
+<h3>DIAMOND RIDGE</h3>
 </a>
 </div>
 </div>
 
+
+<div class="link-container col-10 col-md-8 col-xl-4 offset-1 offset-md-2 offset-xl-4">
+  <a href="portfolio.html" class="link-outline col-12"><p class="col-10">SEE ALL LISTINGS</p>
+  <img src="assets/arrow.svg" alt="#" class="col-2">
+  </a>
+</div>
 
 </section>
 
