--- a/development.html
+++ b/development.html
@@ -17,11 +17,11 @@
 
 
 
-        <div class="logo-container col-1 col-lg-2 offset-lg-1 offset-lg-0 float-left">
-      <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-      <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+        <div class="logo-container col-1 col-xl-2 offset-lg-0 offset-lg-0 float-left">
+      <a href="index.html" class="col-12 float-left p-0 d-xl-none"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+      <a href="index.html" class="d-none d-xl-block d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
   </div>
-      <h5 class="col-8">A Luxury Real Estate Firm</h5>
+      <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
 
       <div class="menu-container col-1 offset-1 d-lg-none">
@@ -30,85 +30,74 @@
 
       </header>
 
-      <nav class="col-12 col-lg-10 offset-lg-2" id="nav">
-        <ul class="main-nav col-10 col-lg-6 offset-1 offset-lg-2">
+      <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
+        <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
           <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
-          <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a></li>
+          <li class="nav-item-2" id="active"><a href="what-we-do.html">WHAT WE DO</a></li>
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 col-lg-4 offset-1 offset-lg-0">
+          <ul class="secondary-nav col-10 col-lg-4 col-xl-4 offset-1 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
 
           </nav>
 
-<div class="scroll-container col-12 p-0">
+
+<div class="scroll-container col-12 p-0" id="what-we-do">
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-        <video muted autoplay playsinline class="video-background" id="home-hero">
-<source src="assets/videos/hero.mp4" type="video/mp4">
+        <video muted autoplay playsinline class="video-background">
+<source src="assets/videos/who-we-are.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="delay-1">Shaping</span><br><span class="delay-2">spaces that</span><br><span class="green-underline delay-3">shape lives.</span></h1>
+<h1 class="col-10 offset-1"><span class="delay-1">DISTINCT</span><br><span class="green-underline delay-2">VISIONS</span></h1>
+
         </section>
 
 
 
-<section class="col-12" id="container-2">
-<span class="top"></span>
+        <section class="col-12" id="container-2">
+        <span class="top"></span>
 
 
 
+  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">BEYOND
+    <br>
+<span class="green-underline">BUILDINGS</span></h2>
 
-
-  <h2 class="col-10 col-md-8 offset-1 offset-md-2">ELEVATING
-<br>
-<span class="green-underline">EXPERIENCE</span></h2>
-<div class="copy-container col-12">
-<p class="col-10 col-md-8 offset-1 offset-md-2">
-As leaders in all industries continue to search for competitive advantages, they continue to overlook the most effective weapon in their arsenal—their workplace. We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come.
+<div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
+<p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
+We are reimagining the role that a workplace plays in the world so that it can work better for the people that occupy it. We understand it goes beyond a concrete box – it’s a reflection of the people who fill its spaces. Our approach to workplace development embraces the human perspective in all steps of the problem-solving process to create environments usable and useful by, you guessed it, people.
 </p>
 
+</div>
 
+  <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
 
-  </div>
+  <a href="#" class="col-12 link-outline-2"><p class="col-10">GENERAL CONTRACTING & PROJECT OVERSIGHT</p>
+<img src="assets/arrow.svg" alt="#" class="col-2">
+</a>
 
-<div class="link-container col-10 col-md-8 offset-1 offset-md-2">
-  <a href="who-we-are.html" class="link-outline col-12"><p class="col-10">GET TO KNOW US</p>
+    <a href="#" class="col-12 link-outline-2"><p class="col-10">ESTIMATING & SCHEDULING</p>
+<img src="assets/arrow.svg" alt="#" class="col-2">
+    </a>
+
+  <a href="#" class="col-12 link-outline-2"><p class="col-10">SUSTAINABLE DEVELOPMENT PRACTICES</p>
+<img src="assets/arrow.svg" alt="#" class="col-2">
+    </a>
+
+    <a href="#" class="col-12 link-outline-2"><p class="col-10">TENANT COORDINATION</p>
   <img src="assets/arrow.svg" alt="#" class="col-2">
-  </a>
-</div>
+      </a>
 
-</section>
-
-
-
-<section class="col-12 p-0 d-none d-lg-block">
-<embed class="col-12 p-0" src="push-1.html" id="cover-1">
-</section>
-
-
-<section class="col-12 p-0" id="push-mobile">
-<img src="assets/images/push-1.svg" alt="#">
-</section>
-
-
-
-<section class="col-12 p-0" id="push-1-pt2-mobile">
-
-  <div class="reveal-container col-10 col-lg-3 offset-1">
-  <h2 class="col-12">
-PUTTING<br>PEOPLE<br><span class="turquoise-underline">FIRST</span>
-    </h2>
-
-    <p class="col-12">
-Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. We ensure that helpful amenities are always within reach and conceive communities where people can interact. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
-  </p>
+      <a href="#" class="col-12 border-bottom link-outline-2"><p class="col-10">DUE DILIGENCE OVERSIGHT</p>
+    <img src="assets/arrow.svg" alt="#" class="col-2">
+        </a>
 
 
 </div>
@@ -116,10 +105,13 @@ Our approach is informed by human values—namely, a desire for health and happi
 </section>
 
 
-<section class="featured-projects col-12" id="featured-projects">
 
 
-<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
+
+<section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
+
+
+<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
   <div class="portfolio-list col-12 float-left">
     <a href="#">
       <div class="col-12 p-0 portfolio-image-container">
@@ -131,7 +123,7 @@ Our approach is informed by human values—namely, a desire for health and happi
 </div>
 
 
-<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
+<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
@@ -142,7 +134,7 @@ Our approach is informed by human values—namely, a desire for health and happi
 </div>
 </div>
 
-<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
+<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
@@ -154,12 +146,33 @@ Our approach is informed by human values—namely, a desire for health and happi
 </div>
 
 
+<div class="link-container col-10 col-md-8 col-xl-4 offset-1 offset-md-2 offset-xl-4">
+  <a href="portfolio.html" class="link-outline col-12"><p class="col-10">SEE ALL DEVELOPMENT</p>
+  <img src="assets/arrow.svg" alt="#" class="col-2">
+  </a>
+</div>
+
 </section>
 
 
 
+<footer class="col-12 d-none d-xl-block">
+  <ul class="col-4">
+    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
+    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+    </ul>
 
-<section class="col-12">
+
+    <ul class="footer-nav col-4 offset-4">
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">NEWS</a></li>
+      <li><a href="#">CAREERS</a></li>
+      <li><a href="#">TENANT PERKS</a></li>
+      </ul>
+
+  </footer>
+
+<section class="col-12 d-xl-none">
         <footer class="col-12">
           <ul class="col-4 offset-1">
             <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
@@ -176,7 +189,8 @@ Our approach is informed by human values—namely, a desire for health and happi
 
           </footer>
         </section>
-        </div><!-- CLOSES SCROLL CONTAINER -->
+ </div>
+
 
 <!-- DROPDOWN MENU SCRIPT
 <script>
@@ -190,6 +204,8 @@ Our approach is informed by human values—namely, a desire for health and happi
 }
 </script>
 -->
+
+ <script src="js/grid.js"></script>
 
 <script>
 function myFunction() {
