--- a/what-we-do.html
+++ b/what-we-do.html
@@ -79,16 +79,16 @@ As leaders in all industries continue to search for competitive advantages, they
 
   <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
 
-  <a href="#" class="col-12 link-outline-2"><p class="col-10">BROKERAGE</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
+  <a href="brokerage.html" class="col-12 link-outline-2"><p class="col-10">BROKERAGE</p>
+<img src="assets/arrow.svg" alt="brokerage.html" class="col-2">
 </a>
 
-    <a href="#" class="col-12 link-outline-2"><p class="col-10">DEVELOPMENT</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
+    <a href="development.html" class="col-12 link-outline-2"><p class="col-10">DEVELOPMENT</p>
+<img src="assets/arrow.svg" alt="development.html" class="col-2">
     </a>
 
-  <a href="#" class="col-12 border-bottom link-outline-2"><p class="col-10">MANAGEMENT</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
+  <a href="management.html" class="col-12 border-bottom link-outline-2"><p class="col-10">MANAGEMENT</p>
+<img src="assets/arrow.svg" alt="management.html" class="col-2">
     </a>
 
 
