--- a/press.html
+++ b/press.html
@@ -110,7 +110,7 @@
               <div class="portfolio-list col-12 float-left">
                 <a href="portfolio-beacon.html">
                   <div class="col-12 p-0 portfolio-image-container">
-              <img src="assets/images/portfolio/beacon.png" alt="#">
+              <img src="assets/images/portfolio/visionedit.png" alt="#">
               </div>
             <h3>Corridors of Opportunity: What's next for the Strip District?</h3>
             <p>Feb 25, 2021, 12:42pm EST | Pittsburgh Business Times</p>
@@ -123,7 +123,7 @@
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-bentley.html">
                 <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/portfolio/bentley.png" alt="#">
+            <img src="assets/images/press/jim.png" alt="#">
             </div>
             <h3>Scalo's Viewpoint: The forces Covid can't stop</h3>
             <p>Feb 3, 2021, 7:54am EST | Jim Scalo</p>
@@ -135,7 +135,7 @@
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-boardwalk.html">
                 <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/portfolio/boardwalk.png" alt="#">
+            <img src="assets/images/press/diamond-ridge.png" alt="#">
             </div>
             <h3>Burns Scalo buys former KMart site in Moon from Chevron to add to Diamond Ridge plan</h3>
             <p>Dec 30, 2020, 2:02pm EST | Tim Schooley</p>
@@ -150,7 +150,7 @@
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-diamond-ridge.html">
                 <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/portfolio/diamond.png" alt="#">
+            <img src="assets/images/press/bsb.png" alt="#">
             </div>
             <h3>Burns Scalo doubles investment on Riviera office project and lands another life sciences firm</h3>
             <p>Dec 29, 2020, 11:05am EST | Tim Schooley</p>
@@ -162,7 +162,7 @@
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-piazza.html">
                 <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/portfolio/piazza.png" alt="#">
+            <img src="assets/images/press/biotech.png" alt="#">
             </div>
             <h3>Burns Scalo lands publicly traded biotech firm for Riviera in South Oakland</h3>
             <p>Oct 14, 2020, 2:59pm EDT | Tim Schooley</p>
@@ -174,10 +174,10 @@
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-riviera.html">
                 <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/portfolio/riviera.png" alt="#">
+            <img src="assets/images/press/management.png" alt="#">
             </div>
-            <h3>THE RIVIERA</h3>
-            <p>South Oakland</p>
+            <h3>Largest Pittsburgh-area Commercial Property Managers</h3>
+            <p> Jan 01, 2021, 6:00am EST | Pittsburgh Business Times</p>
             </a>
             </div>
           </li>
@@ -186,10 +186,10 @@
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-vision.html">
                 <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/portfolio/visionedit.png" alt="#">
+            <img src="assets/images/press/bentley.png" alt="#">
             </div>
-            <h3>THE VISION</h3>
-            <p>Strip District</p>
+            <h3>Best Places to Work in Western Pennsylvania, Large category</h3>
+            <p>Dec 05, 2020, 7:03pm EST| Pittsburgh Business Times</p>
             </a>
             </div>
           </li>
@@ -198,15 +198,29 @@
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-zenith.html">
                 <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/portfolio/zenith.png" alt="#">
+            <img src="assets/images/press/future.png" alt="#">
             </div>
-            <h3>ZENITH RIDGE</h3>
-            <p>Southpointe</p>
+            <h3>Developers work to 'future proof' their projects for a very different world after Covid-19</h3>
+            <p>May 1, 2020, 2:57pm EDT | Tim Schooley</p>
             </a>
             </div>
-
-
           </li>
+
+
+          <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+          <div class="portfolio-list col-12 float-left">
+            <a href="portfolio-zenith.html">
+              <div class="col-12 p-0 portfolio-image-container">
+          <img src="assets/images/press/cbre.png" alt="#">
+          </div>
+          <h3>CBRE ranks Pittsburgh as top emerging market for life sciences based on fast-growing R&D employment</h3>
+          <p>Oct 16, 2020, 8:20am EDT | Tim Schooley</p>
+          </a>
+          </div>
+        </li>
+
+
+
         </ul>
 
       </div>
